just added some links to readme

--- a/ExpoFrontend/app.json
+++ b/ExpoFrontend/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
-    "name": "ExpoFrontend",
-    "slug": "ExpoFrontend",
-    "version": "1.0.0",
+    "name": "Quit For Greater Good",
+    "slug": "QuitFGGood",
+    "version": "0.0.1",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "scheme": "myapp",
