first commit of changing over to actix

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,5 @@
 POSTGRES_USER=qfgg_admin
 POSTGRES_PASSWORD=qfggzaq1ZAQ!CDE#
 POSTGRES_DB=qfgg-db
+POSTGRES_HOST=localhost
+DATABASE_URL=postgres://$(POSTGRES_USER):$(POSTGRES_PASSWORD)@$(POSTGRES_HOST)/$(POSTGRES_DB) ;\
